--- a/assets/css/Animated-Text-Background.css
+++ b/assets/css/Animated-Text-Background.css
@@ -3,8 +3,9 @@
   flex-flow: column;
   justify-content: center;
   width: 100%;
-  height: 100vh;
-  background: #232a42;
+  padding-bottom: 100px;
+  overflow: hidden;
+  height: 100%;
 }
 
 #animatedTextHeading {
@@ -14,10 +15,57 @@
   text-align: center;
   font-weight: 900;
   font-size: 16vmax;
-  filter: saturate(126%);
   box-shadow: 0px 0px 0px;
   line-height: .8em;
   letter-spacing: -1vmax;
-  min-width: 244px;
+  filter: blur(0px);
+  overflow: visible;
+}
+
+.nav-item {
+  padding: 1vw;
+  padding-top: 2vh;
+  font-size: 1.1vw;
+  color: rgb(145,167,189);
+}
+
+#navbar {
+  /*transition: 0.4s;*/
+  transition-delay: 3s;
+}
+
+.col img {
+  width: 100%;
+  border-radius: 3px;
+  box-shadow: 5px 5px 18px rgba(7,0,23,0.15);
+  filter: saturate(0%);
+}
+
+#portfolio h3 {
+  color: rgb(49,109,91);
+}
+
+#portfolio p {
+  color: rgb(182,123,218);
+  font-weight: 200;
+}
+
+#nav-work p {
+}
+
+#work p {
+  color: rgb(67,114,160);
+}
+
+#work h3 {
+  color: rgb(131,93,65);
+}
+
+#skills h3 {
+  color: #c7d151;
+}
+
+#skills p {
+  color: #77bb24;
 }
 
