--- a/assets/css/Animated-Text-Background.css
+++ b/assets/css/Animated-Text-Background.css
@@ -1,11 +1,8 @@
 #animatedTextBackground {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  width: 100%;
-  padding-bottom: 100px;
-  overflow: hidden;
-  height: 100%;
+  /*display: flex;*/
+  /*flex-flow: column;*/
+  /*justify-content: center;*/
+  /*overflow: hidden;*/
 }
 
 #animatedTextHeading {
@@ -14,24 +11,27 @@
   -webkit-background-clip: text !important;
   text-align: center;
   font-weight: 900;
-  font-size: 16vmax;
+  font-size: 25vmax;
   box-shadow: 0px 0px 0px;
   line-height: .8em;
   letter-spacing: -1vmax;
   filter: blur(0px);
   overflow: visible;
+  min-width: 70vw;
+  padding-top: 57px;
 }
 
 .nav-item {
   padding: 1vw;
   padding-top: 2vh;
-  font-size: 1.1vw;
+  font-size: 18px;
   color: rgb(145,167,189);
 }
 
 #navbar {
   /*transition: 0.4s;*/
   transition-delay: 3s;
+  filter: brightness(NaN%) hue-rotate(0deg) invert(0%);
 }
 
 .col img {
@@ -67,5 +67,19 @@
 
 #skills p {
   color: #77bb24;
+}
+
+.col.d-lg-flex.justify-content-lg-center.align-items-lg-center.col-md-8 {
+}
+
+.header-margins {
+}
+
+#moto p {
+  color: rgb(150,153,175);
+}
+
+#moto h3 {
+  color: rgb(177,191,184);
 }
 
