--- a/assets/css/Animated-Text-Background.css
+++ b/assets/css/Animated-Text-Background.css
@@ -9,22 +9,24 @@
   font-family: 'Arbutus Slab', serif;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text !important;
-  text-align: center;
   font-weight: 900;
-  font-size: 25vmax;
+  font-size: 19vmax;
   box-shadow: 0px 0px 0px;
   line-height: .8em;
   letter-spacing: -1vmax;
   filter: blur(0px);
   overflow: visible;
   min-width: 70vw;
-  padding-top: 57px;
+  padding: 0;
+  padding-top: 13vh;
+  text-align: left;
+  padding-left: 16vw;
 }
 
 .nav-item {
   padding: 1vw;
   padding-top: 2vh;
-  font-size: 18px;
+  font-size: 2vh;
   color: rgb(145,167,189);
 }
 
