--- a/assets/css/Animated-Text-Background.css
+++ b/assets/css/Animated-Text-Background.css
@@ -10,7 +10,7 @@
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text !important;
   font-weight: 900;
-  font-size: 19vmax;
+  font-size: 16vmax;
   box-shadow: 0px 0px 0px;
   line-height: .8em;
   letter-spacing: -1vmax;
@@ -18,9 +18,9 @@
   overflow: visible;
   min-width: 70vw;
   padding: 0;
-  padding-top: 13vh;
+  padding-top: 21vh;
   text-align: left;
-  padding-left: 16vw;
+  padding-left: 21vw;
 }
 
 .nav-item {
@@ -83,5 +83,8 @@
 
 #moto h3 {
   color: rgb(177,191,184);
+}
+
+#animatedTextHeading {
 }
 
