--- a/assets/css/Animated-Text-Background.css
+++ b/assets/css/Animated-Text-Background.css
@@ -1,32 +1,22 @@
 #animatedTextBackground {
-  /*display: flex;*/
-  /*flex-flow: column;*/
-  /*justify-content: center;*/
-  /*overflow: hidden;*/
+  height: 50%;
 }
 
 #animatedTextHeading {
-  font-family: 'Arbutus Slab', serif;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text !important;
-  font-weight: 900;
   font-size: 16vmax;
-  box-shadow: 0px 0px 0px;
   line-height: .8em;
   letter-spacing: -1vmax;
-  filter: blur(0px);
-  overflow: visible;
-  min-width: 70vw;
-  padding: 0;
-  padding-top: 21vh;
-  text-align: left;
-  padding-left: 21vw;
+  font-family: 'Arbutus Slab', serif;
+  font-weight: 900;
+  background: url("https://cdn.bootstrapstudio.io/placeholders/1400x800.png") center / cover repeat-x, rgb(77,62,70);
 }
 
 .nav-item {
   padding: 1vw;
   padding-top: 2vh;
-  font-size: 2vh;
+  font-size: 1.9vh;
   color: rgb(145,167,189);
 }
 
@@ -68,7 +58,7 @@
 }
 
 #skills p {
-  color: #77bb24;
+  color: rgb(25,175,135);
 }
 
 .col.d-lg-flex.justify-content-lg-center.align-items-lg-center.col-md-8 {
@@ -83,8 +73,5 @@
 
 #moto h3 {
   color: rgb(177,191,184);
-}
-
-#animatedTextHeading {
 }
 
