--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,8 @@
 body, html {
-  margin: 0px;
-  padding: 0px;
-  height: 100vh;
-  width: 100vw;
+  /*margin: 0px;*/
+  /*padding: 0px;*/
+  /*height: 100vh;*/
+  /*width: 100vw;*/
   font-family: Lato, sans-serif;
 }
 
