--- a/assets/css/Animated-Text-Background.css
+++ b/assets/css/Animated-Text-Background.css
@@ -1,14 +1,17 @@
 #animatedTextBackground {
   height: 50%;
   visibility: hidden;
+  
 }
 
 #animatedTextHeading {
+  
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   -webkit-background-origin: padding-box;
   font-size: 16vmax;
   line-height: .8em;
+  will-change: transform, opacity;
   letter-spacing: -1vmax;
   font-family: 'Arbutus Slab', serif;
   font-weight: 900;
