--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@
 }
 
 #animatedTextHeading {
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text !important;
   font-size: 16vmax;
